<resources>
    <string name="app_name">IR-Domo</string>
    <string name="app_email">mario@hotmail.com</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_infoDevice">Devices Info</string>
    <string name="title_infodevices">Devices Information</string>

    <string name="remote_control">Controls</string>
    <string name="add_devices">Add Devices</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_backup">Backup</string>
    <string name="nav_help">Help</string>

    <string name="button_remoteControl">IR Controls</string>
    <string name="button_lights">Lights</string>
    <string name="button_curtains">Curtains</string>
    <string name="button_switch">Switch</string>
    <string name="button_secutiry">Security</string>

    <string name="button_next">Next</string>

    <string name="title_add_device1">CONFIGURING NEW DEVICE</string>
    <string name="msg_add_device1">Connect the device to the power and wait until the LED turns on; Press 3 times the button to configure the device, the LED should be flashing </string>
    <string name="msg1_add_device1">Is the device number: </string>
    <string name="msg2_add_device1">Enter a name for the device </string>
    <string name="msg3_add_device1">Select</string>
    <string name="msg4_add_device1">Select a device number and give it a name</string>
    <string name="msg5_add_device1">Connect your smartphone to the wifi where the device will be included</string>

    <string name="msg1_add_device2">Exit the app and enter the wifi settings of the smart device</string>
    <string name="msg2_add_device2">Connect to the wireless network TDomoXX or TirXX and then return to the app and press "Next"</string>

    <string name="msg1_add_device3">Parameters to configure</string>
    <string name="msg2_add_device3">Confirm you wifi SSID</string>
    <string name="msg3_add_device3">Enter your wifi password</string>
    <string name="msg4_add_device3">Password</string>
    <string name="button_add_device3">Set Up</string>
    <string name="msg5_add_device3">The device number already exists with name: </string>
    <string name="msg6_add_device3">Device was not saved </string>
    <string name="msg7_add_device3">Device was saved with name:  </string>

    <string name="msg1_info_device">Device Information</string>

    <string name="msg1_update_device">Complete information of the device</string>
    <string name="msg2_update_device">Device Id: </string>
    <string name="msg3_update_device">Device Name: </string>
    <string name="msg4_update_device">Device Ip Lan: </string>
    <string name="msg5_update_device">Device Port: </string>
    <string name="msg6_update_device">Enter new information and update, or delete the device </string>
    <string name="button_update_device">Update</string>
    <string name="button_delete_device">Delete</string>

    <string name="alertmsg1_update_device">Are you sure you want to delete the device?</string>
    <string name="alertmsg2_update_device">Yes</string>
    <string name="alertmsg3_update_device">No</string>
    <string name="alertmsg4_update_device">Are you sure you want to delete the control?</string>
    <string name="alertmsg5_delete">It was deleted</string>
    <string name="title_activity_ir_controls">Ir Controls</string>

    <string name="title_activity_addcontrolir">Add controller</string>
    <string name="icon_controlTv">TV</string>
    <string name="icon_controlDecoder">Decoder/Sat</string>
    <string name="icon_controlDvd">DVD/BR</string>
    <string name="icon_controlAc">AC</string>
    <string name="icon_controlBox">Box</string>
    <string name="icon_controlProjector">Projector</string>
    <string name="icon_controlAvreceiver">A/V Receiver</string>
    <string name="icon_controlFan">Fan</string>

    <string name="title_activity_selectdevice">Select Device</string>
    <string name="selectdevice_msg1">Select the device TDomo or TIR to control</string>

    <string name="title_activity_selectmodel">Select Model</string>

    <string name="button_learn_ircode">Learn codes</string>

    <string name="selectmodel_msg1">Select a model</string>

    <string name="title_activity_editcontrolname">Edit Control Name</string>
    <string name="editcontrolname_msg1">Edit control name</string>

    <string name="button_save">SAVE</string>
    <string name="button_cancel">CANCEL</string>
    <string name="button_name">Button Name</string>
    <string name="button_trycode1">Try code 1</string>
    <string name="button_trycode2">Try code 2</string>
    <string name="button_savecode1">Save code 1</string>
    <string name="button_savecode2">Save code 2</string>
    <string name="button_learnircode">Learn IR Code</string>
    <string name="msg_saved">SAVED</string>
    <string name="msg_waiting">Waiting</string>
    <string name="msg_sent">Sent</string>
    <string name="msg_update">it is updated</string>

    <string name="msg1_edit_controlname">The control name already exists like: </string>
    <string name="msg2_edit_controlname">Saved control</string>
    <string name="title_activity_template_controlir2">TemplateControlir2Activity</string>

    <string name="menu_template_controlir2_item1">Edit Button</string>
    <string name="menu_template_controlir2_item2">Edit Control</string>
    <string name="menu_template_controlir2_item3">Delete</string>
    <string name="menu_template_controlir2_item4">Learn Ir Codes</string>

    <string name="title_activity_editbutton1">Learn Ir Code</string>

    <string name="received_codes">Received codes</string>

    <string name="msg_vibrate_ontap">Vibrate on tap</string>

    <string name="title_activity_Settings_activity">Settings</string>

    <string name="favorite_channel">Favorite channel</string>
    <string name="channel_number">Channel Number</string>
    <string name="channel_name">Channel Name</string>

    <string name="choose_device__tocontrol">Choose the device to control</string>

    <string name="title_editcontroltemplate">Edit Control</string>
    <string name="editcontroltemplate_msg1">Do not change it</string>
    <string name="btn_save_updatecontrolname">Update Control Name</string>
    <string name="btn_save_updatedevicecontrol">Update Device Control</string>

    <string name="msg_export_full_database">Export all controls and devices</string>
    <string name="msg_import_full_database">It imports all the controls and devices</string>
    <string name="btn_export_fulldatabase">EXPORT</string>
    <string name="btn_import_fulldatabase">IMPORT</string>

    <string name="msg_exporting_data">Exporting data</string>
    <string name="msg_succesful_export">Successful export</string>
    <string name="msg_error_exporting">Error exporting</string>
    <string name="msg_succesful_import">Succesful import</string>
    <string name="alert_msg_import_fullbackup">Be sure to import new data? These will erase the previous data.</string>

    <string name="msg_color_nochange">No change</string>
    <string name="color_red1">Red1</string>
    <string name="color_red2">Red2</string>
    <string name="color_blue1">Blue1</string>
    <string name="color_blue2">Blue2</string>
    <string name="color_gray1">Gray1</string>
    <string name="color_gray2">Gray2</string>
    <string name="color_yellow1">Yellow1</string>
    <string name="color_green1">Green1</string>
    <string name="color_white">White</string>

    <string name="title_editbutton">Edit Button</string>
    <string name="update_button">Update Button</string>
    <string name="button_color">Button Color</string>
    <string name="button_icon">Button Icon</string>
    <string name="msg1_editbutton2">Select if you want to change the device with which this button is communicated</string>



</resources>
