<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_edit_button"
        android:orderInCategory="100"
        android:title="@string/menu_template_controlir2_item1"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_edit_controlname"
        android:orderInCategory="100"
        android:title="@string/menu_template_controlir2_item2"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/item_delete_control"
        android:orderInCategory="100"
        android:title="@string/menu_template_controlir2_item3"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_learn_ircodes"
        android:orderInCategory="100"
        android:title="@string/menu_template_controlir2_item4"
        app:showAsAction="never" />

</menu>