<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mario.tirdomo.EditButton1Activity"
    tools:layout_editor_absoluteY="81dp">


    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_name"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editButtonName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:gravity="center"
        android:hint="Name"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <Button
        android:id="@+id/btnLearIr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/Green1"
        android:onClick="buttonPressed"
        android:text="@string/button_learnircode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editButtonName" />

    <TextView
        android:id="@+id/textViewMsgReceiver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:hint="Waiting"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnLearIr" />

    <Button
        android:id="@+id/btnTest1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="33dp"
        android:backgroundTint="?attr/colorPrimary"
        android:onClick="buttonPressed"
        android:text="@string/button_trycode1"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveCode1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewMsgReceiver" />

    <Button
        android:id="@+id/btnTest2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="buttonPressed"
        android:text="@string/button_trycode2"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelLearn"
        app:layout_constraintEnd_toStartOf="@+id/btnSaveCode2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSaveCode1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:backgroundTint="@color/Gray1"
        android:onClick="buttonPressed"
        android:text="@string/button_savecode1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTest1"
        app:layout_constraintTop_toBottomOf="@+id/textViewMsgReceiver" />

    <Button
        android:id="@+id/btnSaveCode2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/Gray1"
        android:onClick="buttonPressed"
        android:text="@string/button_savecode2"
        app:layout_constraintBottom_toTopOf="@+id/btnCancelLearn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnTest2" />


    <Button
        android:id="@+id/btnCancelLearn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/Red1"
        android:text="@string/button_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
