<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mario.tirdomo.UpdateDeviceActivity">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/msg1_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="66dp"
        android:layout_marginTop="62dp"
        android:gravity="center"
        android:text="@string/msg6_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/textView18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <EditText
        android:id="@+id/editText_updatedeviceId"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="183dp"
        android:hint="Device Number"
        android:singleLine="true"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView18"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="53dp"
        android:text="@string/msg2_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_updatedeviceId"
        app:layout_constraintEnd_toStartOf="@+id/editText_updatedeviceId"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_updatedeviceName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="Device Name"
        android:singleLine="true"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/editText_updatedeviceId" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="16dp"
        android:text="@string/msg3_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_updatedeviceName"
        app:layout_constraintEnd_toStartOf="@+id/editText_updatedeviceName"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_updatedeviceIplan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="2dp"
        android:hint="Ip Lan"
        android:singleLine="true"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/editText_updatedeviceName" />


    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="16dp"
        android:text="@string/msg4_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText_updatedeviceIplan"
        app:layout_constraintEnd_toStartOf="@+id/editText_updatedeviceIplan"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_updatedevicePort"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:hint="Port"
        android:singleLine="true"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/editText_updatedeviceIplan" />


    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="32dp"
        android:text="@string/msg5_update_device"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/editText_updatedevicePort"
        app:layout_constraintEnd_toStartOf="@+id/editText_updatedevicePort"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_updateDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/button_update_device"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:onClick="button_Update"
        app:layout_constraintBottom_toBottomOf="@+id/button_deleteDevice"
        app:layout_constraintEnd_toEndOf="@+id/textView20"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/button_deleteDevice" />

    <Button
        android:id="@+id/button_deleteDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="46dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/button_delete_device"
        android:textSize="20dp"
        android:onClick="button_Delete"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_updatedevicePort" />

</android.support.constraint.ConstraintLayout>
